Added product service to open the Stripe client with dummy data

--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -3,5 +3,8 @@
     <div class="title m-b-md">
       Product description
     </div>
+    <div>
+      <button class="buyProduct" (click)="purchaseProduct()">BUY</button>
+    </div>
   </div>
 </div>
