--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div style="text-align:center">
+<div style="text-align:center; margin-top:10px">
+  <img src="./favicon.ico" width="8%">
   <h1>
     {{ title }}
   </h1>
